[package]
name = "lambda_lang"
version = "0.1.0"
authors = ["monksc <ccmonks32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang_parser = { git = "https://github.com/Monksc/ll1_parser.git", branch = "main" }

